<?xml version="1.0"?>
<package format="2">
  <name>CCTV_Layer_ROS</name>
  <version>0.1.0</version>
  <description>The CCTV_Layer_ROS package</description>

  <maintainer email="sh@todo.todo">sh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_generation</exec_depend>

</package>
